# ofsec

./: .env.example  .gitignore  README.md  README_QUICKSTART.md  append_events.py  docker-compose.grafana.yml  docker-compose.prod.yml  docker-compose.yml  mypy_final.txt  mypy_report.txt  ruff_report.txt  skills-lock.json  start.bat  start.sh  start_ofsec.bat  stop.bat  stop.sh
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_verifications.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: c9ca0cb61324_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  ai.py  attack.py  auth.py  brain.py  cli.py  defense.py  log_router.py  ops.py  recon.py  scanner.py  vault.py
backend/app/core/: __init__.py  constants.py  encryption.py  exceptions.py  logging.py  notifier.py  redis_bus.py  sandbox.py  scheduler.py  security.py  startup_checks.py  stream_bus.py  telemetry.py
backend/app/models/: __init__.py  vault.py
backend/app/repositories/: __init__.py  alert_repo.py  audit_repo.py  ioc_repo.py  scan_repo.py  user_repo.py  vuln_repo.py
backend/app/schemas/: __init__.py
backend/app/services/ai/: __init__.py  anomaly_detection.py  llm_engine.py  memory.py  nlp_intelligence.py  orchestrator.py  predictive_models.py  self_learning.py
backend/app/services/ai_engine/: __init__.py
backend/app/services/attack/: __init__.py  c2_framework.py  exploit_engine.py  orchestrator.py  payload_generator.py  phishing_engine.py  post_exploitation.py
backend/app/services/defense/: __init__.py  incident_response.py  operations.py  orchestrator.py  siem_integration.py  threat_hunting.py
backend/app/services/operations/: __init__.py
backend/app/services/ops/: __init__.py  command_runner.py  dashboard.py  installer.py  orchestrator.py  scheduler.py  security.py
backend/app/services/recon/: __init__.py  advanced_modules.py  cert_transparency.py  domain_blacklist.py  orchestrator.py  osint_feed.py  passive_dns.py  recon_report.py  search_engine.py  social_mining.py  web_archive.py  whois_correlation.py
backend/app/services/scanner/: __init__.py  advanced_scanner.py  api_scanner.py  dependency_scanner.py  header_analyzer.py  network_scanner.py  orchestrator.py  ssl_auditor.py  web_scanner.py
backend/app/workers/: __init__.py  ai_tasks.py  attack_tasks.py  db_utils.py  defense_tasks.py  intel_tasks.py  recon_tasks.py  scan_tasks.py  taskiq_app.py
backend/tests/: conftest.py
backend/tests/test_api/: test_endpoints.py
docs/: migrations.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/css/: animations.css  components.css  design-system.css  layout.css  style.css
frontend/js/: api.js  app.js  main.js  router.js  ui.js
frontend/js/core/: ApiClient.js  Router.js  State.js
frontend/js/features/: AIController.js  DashboardController.js  DefenseController.js  ReportsController.js  ResultsController.js  ScanController.js  SettingsController.js  ThreatsController.js
frontend/js/pages/: ai.js  dashboard.js  defense.js  reports.js  results.js  scan.js  settings.js  threats.js
frontend/js/utils/: DOM.js
grafana/: prometheus.yml
grafana/provisioning/datasources/: prometheus.yml
infra/certs/: README.md
infra/docker/nginx/: nginx.conf  nginx.prod.conf
infra/docker/postgres/: init.sql
infra/docker/prometheus/: prometheus.yml
infra/docker/qdrant/: config.yaml
infra/docker/redis/: redis.conf
