[project]
name = "ofsec-backend"
version = "3.0.0"
description = "OfSec Vector Triangulum V3 — Cybersecurity Operations Platform"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # ─── Core Framework ───────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # ─── Database ─────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ─── Task Queue (Taskiq — 10x faster than Celery) ──
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "taskiq-fastapi>=0.3.0",

    # ─── Cache ────────────────────────────────────
    "redis>=5.2.0",

    # ─── HTTP Clients ─────────────────────────────
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # ─── Serialization (hot paths) ────────────────
    "msgspec>=0.19.0",

    # ─── Security ─────────────────────────────────
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",

    # ─── Vector DB ────────────────────────────────
    "qdrant-client>=1.12.0",
    "faiss-cpu>=1.9.0",

    # ─── Observability ────────────────────────────
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",

    # ─── Reporting ────────────────────────────────
    "jinja2>=3.1.4",
    "weasyprint>=63.0",

    # ─── Networking / Recon ───────────────────────
    "scapy>=2.6.0",
    "python-nmap>=0.7.1",
    "dnspython>=2.7.0",
    "python-whois>=0.9.4",
    "beautifulsoup4>=4.12.3",
    "selenium>=4.27.0",
    "shodan>=1.31.0",

    # ─── Vulnerability Tools ──────────────────────
    "python-owasp-zap-v2.4>=0.0.22",
    "sslyze>=6.0.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
]

[project.optional-dependencies]
# AI/ML dependencies (large — install separately)
ml = [
    "torch>=2.6.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.6.0",
    "dgl>=2.4.0",
    "stable-baselines3>=2.4.0",
    "transformers>=4.47.0",
    "sentence-transformers>=3.3.0",
    "spacy>=3.8.0",
    "nltk>=3.9.0",
    "adversarial-robustness-toolbox>=1.18.0",
]

# LLM orchestration
llm = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "llama-index>=0.12.0",
    "crewai>=0.86.0",
    "google-generativeai>=0.8.0",
]

# AI Red-Teaming
redteam = [
    "pyrit>=0.5.0",
]

# Attack simulation
attack = [
    "paramiko>=3.5.0",
    "impacket>=0.12.0",
    "pwntools>=4.13.0",
    "mitmproxy>=11.0.0",
]

# Development
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# E2E testing
e2e = [
    "playwright>=1.49.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]
